--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -49,32 +49,32 @@
                 <!-- Full-width images with number text -->
                 <div class="mySlides">
                   <div class="numbertext">1 / 6</div>
-                  <img src="image/sample.jpg" alt="sample" class="image">
+                  <img src="BikeMap2.png" alt="sample" class="image1">
                 </div>
 
                 <div class="mySlides">
                   <div class="numbertext">2 / 6</div>
-                  <img src="image/sample.jpg" alt="sample" class="image">
+                  <img src="BikeMap2.png" alt="sample" class="image1">
                 </div>
 
                 <div class="mySlides">
                   <div class="numbertext">3 / 6</div>
-                  <img src="image/sample.jpg" alt="sample" class="image">
+                  <img src="BikeMap2.png" alt="sample" class="image1">
                 </div>
 
                 <div class="mySlides">
                   <div class="numbertext">4 / 6</div>
-                  <img src="image/sample.jpg" alt="sample" class="image">
+                  <img src="BikeMap2.png" alt="sample" class="image1>
                 </div>
 
                 <div class="mySlides">
                   <div class="numbertext">5 / 6</div>
-                  <img src="image/sample.jpg" alt="sample" class="image">
+                  <img src="BikeMap2.png" alt="sample" class="image1">
                 </div>
 
                 <div class="mySlides">
                   <div class="numbertext">6 / 6</div>
-                  <img src="image/sample.jpg" alt="sample" class="image">
+                  <img src="BikeMap2.png" alt="sample" class="image1">
                 </div>
 
                 <!-- Next and previous buttons -->
@@ -89,26 +89,26 @@
                 <!-- Thumbnail images -->
                 <div class="row">
                   <div class="column">
-                    <img class="demo cursor" src="image/sample.jpg" alt="sample" onclick="currentSlide(1)">
+                    <img class="demo cursor" src="BikeMap2.png" alt="sample" onclick="currentSlide(1)">
                   </div>
                   <div class="column">
-                    <img class="demo cursor" src="image/sample.jpg" alt="sample" onclick="currentSlide(2)">
+                    <img class="demo cursor" src="BikeMap2.png" alt="sample" onclick="currentSlide(2)">
                   </div>
                   <div class="column">
-                    <img class="demo cursor" src="image/sample.jpg" alt="sample" onclick="currentSlide(3)">
+                    <img class="demo cursor" src="BikeMap2.png" alt="sample" onclick="currentSlide(3)">
                   </div>
                   <div class="column">
-                    <img class="demo cursor" src="image/sample.jpg" alt="sample" onclick="currentSlide(4)">
+                    <img class="demo cursor" src="BikeMap2.png" alt="sample" onclick="currentSlide(4)">
                   </div>
                   <div class="column">
-                    <img class="demo cursor" src="image/sample.jpg" alt="sample" onclick="currentSlide(5)">
+                    <img class="demo cursor" src="BikeMap2.png" alt="sample" onclick="currentSlide(5)">
                   </div>
                   <div class="column">
-                    <img class="demo cursor" src="image/sample.jpg" alt="sample" onclick="currentSlide(6)">
+                    <img class="demo cursor" src="BikeMap2.png" alt="sample" onclick="currentSlide(6)">
                   </div>
                 </div>
               </div>
-              
+
         <section class = "background3">
 
         </section>
