--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -49,17 +49,17 @@
                 <!-- Full-width images with number text -->
                 <div class="mySlides">
                   <div class="numbertext">1 / 3</div>
-                  <img src="image/BikeMap2.png" alt="sample" class="image1">
+                  <img src="image/BikeMap2.png" alt="Bike Map 1 of Hamilton" class="image1">
                 </div>
 
                 <div class="mySlides">
                   <div class="numbertext">2 / 3</div>
-                  <img src="image/BikeMap2.png" alt="sample" class="image1">
+                  <img src="image/BikeMap2.png" alt="Bike Map 2 of Hamilton" class="image1">
                 </div>
 
                 <div class="mySlides">
                   <div class="numbertext">3 / 3</div>
-                  <img src="image/BikeMap2.png" alt="sample" class="image1">
+                  <img src="image/BikeMap2.png" alt="Bike Map 3 of Hamilton" class="image1">
                 </div>
 
                 <!-- Next and previous buttons -->
