--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -84,13 +84,15 @@
                   </div>
                 </div>
               </div>
-        <section class ="background3">
-          <div class = "container2">
-            <div class="center">
-              <h1 id="HLayout1"> Something something something</h1>
-              <p id="PLayout"> blahblahblah more info blh blalladl</p>
-            </div>
-        </section>
+              <section class="background2">
+                <div class = "container2">
+                    <div class = "center">
+                        <h1> Something about the product here I guess </h1>
+                        <p> Get in reach with one of our GIS specialists today</p>
+                        <button>Book a consultation now</button>
+                    </div>
+                </div>
+            </section>
 
     </body>
 </html>
