button gen func

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class = "center">
                 <h1> Products </h1>
                 <p> Introduction or references to other parts of our website... ideas Ryan</p>
-                <button>Book a consultation now</button>
+                <button id = "myButton">Book a consultation now</button>
             </div>
         </div>
     </section>
