--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Website Title</title>
     <link rel="stylesheet" href="styles.css" />
+    <script src="Script.js"></script>
     <script>
       <!--
       
