--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -75,13 +75,13 @@
         <!-- Thumbnail images -->
         <div class="row">
           <div class="column">
-            <img class="demo cursor" src="image/BikeMap1.png" alt="sample" onclick="currentSlide(1)">
+            <img class="demo cursor" src="image/BikeMap1.png" alt="Street network of Hamilton" onclick="currentSlide(1)">
           </div>
           <div class="column">
-            <img class="demo cursor" src="image/BikeMap2.png" alt="sample" onclick="currentSlide(2)">
+            <img class="demo cursor" src="image/BikeMap2.png" alt="Hamilton" onclick="currentSlide(2)">
           </div>
           <div class="column">
-            <img class="demo cursor" src="image/BikeMap3.png" alt="sample" onclick="currentSlide(3)">
+            <img class="demo cursor" src="image/BikeMap3.png" alt="Local bike network" onclick="currentSlide(3)">
           </div>
         </div>
        </div>
@@ -92,7 +92,7 @@
           <div class = "center">
               <h1> Something about the product here I guess </h1>
               <p> Get in reach with one of our GIS specialists today</p>
-              <button>Book a consultation now</button>
+              <button id = "myButton">Book a consultation now</button>
           </div>
       </div>
   </section>
