--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -92,7 +92,7 @@
           <div class = "center">
               <h1> Something about the product here I guess </h1>
               <p> Get in reach with one of our GIS specialists today</p>
-              <button onclick = "myButton">Book a consultation now</button>
+              <button onclick = "myButton()">Book a consultation now</button>
           </div>
       </div>
   </section>
