--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <div class = "center">
                 <h1> Products </h1>
                 <p> Introduction or references to other parts of our website... ideas Ryan</p>
-                <button id = "myButton">Book a consultation now</button>
+                <button onclick = "myButton()">Book a consultation now</button>
             </div>
         </div>
     </section>
