--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </button>
         <div class="dropdown-content">
           <a href= "ChrisProduct.html"> Chris</a>
-          <a href= "#"> Grace</a>
+          <a href= "bikeinfrastructure.html"> Grace</a>
           <a href= "#"> Ryan</a>
           <a href= "WillProduct.html">William</a>
         </div>
