--- a/ChrisProduct.html
+++ b/ChrisProduct.html
@@ -8,25 +8,25 @@
   </head>
   <body>
 
-    <!-- Navigation Start. Keep this consistent throughout the pages-->
-    <nav>
-      <div class="logo">GR3 Consulting</div>
-      <div class="nav-items">
-      <a href="index.html">Home</a> 
-      <a href="aboutus.html">About Us</a> 
-      <div class = "dropdown">
-          <button class="dropbtn"> Products </button>
-          <div class = "dropdown-content">
-          <a href= "ChrisProduct.html"> Chris</a>
-          <a href= "#"> Grace</a>
-          <a href= "#"> Ryan</a>
-          <a href= "WillProduct.html">William</a>
-          </div>
-      </div> 
-      <a href="contact.html">Contact Us</a>
-      </div>
-  </nav>
-  <!-- Navigation End. Keep this consistent throughout the pages-->
+<!-- Navigation Start. Keep this consistent throughout the pages-->
+<div class="navbar">
+  <div class="logo">GR3 Consulting</div>
+  <a href="index.html">Home</a>
+  <a href="aboutus.html">About Us</a>
+  <a href="contact.html">Contact Us</a>
+  <div class="dropdown">
+    <button class="dropbtn">Products
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href= "ChrisProduct.html"> Chris</a>
+      <a href= "bikeinfrastructure.html"> Grace</a>
+      <a href= "#"> Ryan</a>
+      <a href= "WillProduct.html">William</a>
+    </div>
+  </div>
+</div>
+<!-- Navigation End. Keep this consistent throughout the pages-->
   
     
     <section class="background1">
