--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
     <!-- Navigation Start. Keep this consistent throughout the pages-->
     <div class="navbar">
       <div class="logo">GR3 Consulting</div>
-      <a href="index.html">Home</a>
-      <a href="aboutus.html">About Us</a>
-      <a href="contact.html">Contact Us</a>
+      <a href="index.html" class = "dropbtn">Home</a>
+      <a href="aboutus.html" class = "dropbtn">About Us</a>
+      <a href="contact.html" class = "dropbtn">Contact Us</a>
       <div class="dropdown">
         <button class="dropbtn">Products
           <i class="fa fa-caret-down"></i>
