--- a/index.html
+++ b/index.html
@@ -90,9 +90,8 @@
       <a href="index.html" class = "dropbtn">Home</a>
       <a href="aboutus.html" class = "dropbtn">About Us</a>
       <a href="contact.html" class = "dropbtn">Contact Us</a>
-      <div class="dropdown">
+      <div class="dropdown" id="minimargin"> <!--minimargin id to give some space next to products without messing with flexbox-->
         <button class="dropbtn">Products
-          <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
           <a href= "ChrisProduct.html"> Chris</a>
