--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -5,7 +5,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Bike Infrastructure</title>
         <link rel="stylesheet" href="styles.css" />
-        <script src="Script.js"></script>
     </head>
     
 
@@ -98,4 +97,5 @@
   </section>
 
     </body>
+    <script src="Script.js"></script> <!-- Call in script.js for button and other functions-->
 </html>
