--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Website Title</title>
     <link rel="stylesheet" href="styles.css" />
-    <script src="Script.js"></script>
     <script>
       <!--
       
@@ -128,8 +127,7 @@
         </div>
     </section>
   </body>
-</html>
-</body>
 
+  <script src="Script.js"></script> <!-- Call in script.js for button and other functions-->
 
 </html>
