Starting to chug along on this

--- a/WillProduct.html
+++ b/WillProduct.html
@@ -29,27 +29,33 @@
   <!-- Navigation End. Keep this consistent throughout the pages-->
   
     
-    <section class="background1">
-        <div class="row">
-          <h3>Who is William?</h3>
-        </div class="column-right">
-        <img src="image/willy.JPG" alt="sample" class="image">
-        </div>
-    </section>
+  <section class="background1">
+    <div class="container2">
+      <div class="center">
+        <h1>Implementation of trip planning</h1>
+        <p id="Section1">
+          My contribution to this consulting company is designing and implementing a python application for those looking to visit Provincial Parks in Ontario. More specifically, this application will help users to plan their trip and visit all their desired points of interest in the most efficient manner possible.
+          <br>
+          Based on which parks the user inputs as locations they are interested in, the application will calculate the distances, bearings and trip length, and return to the user an itinerary of parks to visit (in sequential order)
+        </p>
+      </div>
+    </div>
+</section>
 
 
-    <section class="background2">
-        <div class = "container2">
-            <div class = "center">
-                <h1> Products </h1>
-                <p> Introduction or references to other parts of our website... ideas</p>
-                <button>Book a consultation now</button>
-            </div>
-        </div>
-    </section>
-  </body>
-</html>
-</body>
+     <!-- Concluding remarks and button to contact us page-->   
+     <section class="background2">
+      <div class = "container2">
+          <div class = "center">
+              <h1> Pretty neat eh? </h1>
+              <p> If you'd like to learn more ,get in reach with one of our GIS specialists today</p>
+              <button onclick = "myButton()">Book a consultation now</button>
+          </div>
+      </div>
+  </section>
+
+    </body>
+    <script src="Script.js"></script> <!-- Call in script.js for button and other functions-->
 
 
 </html>
