--- a/WillProduct.html
+++ b/WillProduct.html
@@ -33,7 +33,7 @@
     <div class="container2">
       <div class="center">
         <h1>Implementation of trip planning</h1>
-        <p id="Section1">
+        <p id="Section">
           My contribution to this consulting company is designing and implementing a python application for those looking to visit Provincial Parks in Ontario. More specifically, this application will help users to plan their trip and visit all their desired points of interest in the most efficient manner possible.
           <br>
           Based on which parks the user inputs as locations they are interested in, the application will calculate the distances, bearings and trip length, and return to the user an itinerary of parks to visit (in sequential order)
