--- a/WillProduct.html
+++ b/WillProduct.html
@@ -27,13 +27,23 @@
       </div>
     </div>
   <!-- Navigation End. Keep this consistent throughout the pages-->
-  
+
+  <!--  Who is William Section-->
   <section class="background1">
     <div class="row">
       <h3>Who is William?</h3>
     </div>
+    <div class="mySlides">
+      <div class="numbertext">1 / 3</div>
+      <img src="image/BikeMap1.png" alt="Bike Map 1 of Hamilton" class="image1">
+    </div>
+    <p id="Section">
+      My name is William Inglis and a student at Fleming College.
+    </p>
 </section>
-    
+<!-- End of Who is William Section-->
+
+<!-- My product Section-->
   <section class="background1">
     <div class="container2">
       <div class="center">
@@ -46,7 +56,7 @@
       </div>
     </div>
 </section>
-
+<!-- End of My Product Section-->
 
      <!-- Concluding remarks and button to contact us page-->   
      <section class="background2">
