--- a/WillProduct.html
+++ b/WillProduct.html
@@ -35,7 +35,8 @@
     </div>
     <div class="mySlides">
       <div class="numbertext">1 / 3</div>
-      <img src="image/BikeMap1.png" alt="Bike Map 1 of Hamilton" class="image1">
+      <img align="right" src="https://media.geeksforgeeks.org/wp-
+                           content/uploads/20190506164011/logo3.png" alt="">
     </div>
     <p id="Section">
       My name is William Inglis and a student at Fleming College.
