--- a/WillProduct.html
+++ b/WillProduct.html
@@ -29,8 +29,8 @@
   <!-- Navigation End. Keep this consistent throughout the pages-->
 
   <!--  Who is William Section-->
-  <section class="background1">
-    <div class="row">
+  <section class="background3">
+    <div class="row2">
       <h3>Who is William?</h3>
     </div>
     <div class="mySlides">
