--- a/WillProduct.html
+++ b/WillProduct.html
@@ -53,7 +53,7 @@
 
   </div>
   <p id="Section">
-    Ronnie Coleman -"Yeah Buddy"
+    Ronnie Coleman - "Yeah Buddy. Lightweight Baby"
   </p>
 </section>
 <!-- End of Who is William Section-->
