--- a/WillProduct.html
+++ b/WillProduct.html
@@ -30,7 +30,7 @@
 
   <!--  Who is William Section-->
   <section class="background000">
-    <div class="row2">
+    <div class="Section">
       <h3>Who is William?</h3>
     </div>
     <div class="mySlides">
@@ -45,7 +45,7 @@
 
 <!--  Who is William Section-->
  <section class="background000">
-  <div class="row2">
+  <div class="Section">
     <h3>What keeps me motivated?</h3>
   </div>
   <div class="mySlides">
