--- a/WillProduct.html
+++ b/WillProduct.html
@@ -49,8 +49,8 @@
     <h3>What keeps me motivated?</h3>
   </div>
   <div class="mySlides">
-    <img align="center" src="image/RonnieColeman.JPEG" alt="Photo">
-
+    <div class="numbertext">1 / 3</div>
+    <img src="image/RonnieColeman.JPEG" alt="RonnieColeman" class="image1">
   </div>
   <p id="Section">
     Ronnie Coleman - "Yeah Buddy. Lightweight Baby"
