--- a/WillProduct.html
+++ b/WillProduct.html
@@ -30,7 +30,7 @@
 
   <!--  Who is William Section-->
   <section class="background000">
-    <div class="Section">
+    <div id="Section">
       <h3>Who is William?</h3>
     </div>
     <div class="mySlides">
@@ -45,11 +45,11 @@
 
 <!--  Who is William Section-->
  <section class="background000">
-  <div class="Section">
+  <div id="Section">
     <h3>What keeps me motivated?</h3>
   </div>
   <div class="mySlides">
-    <div class="numbertext">1 / 3</div>
+    <div class="numbertext"></div>
     <img src="image/RonnieColeman.JPEG" alt="RonnieColeman" class="image1">
   </div>
   <p id="Section">
