--- a/WillProduct.html
+++ b/WillProduct.html
@@ -50,7 +50,7 @@
   </div>
   <div class="mySlides">
     <div class="numbertext"></div>
-    <img src="image/RonnieColeman.JPEG" alt="RonnieColeman" class="image1">
+    <img src="image/IMG_3235.JPEG" alt="RonnieColeman" class="image1">
   </div>
   <p id="Section">
     Ronnie Coleman - "Yeah Buddy. Lightweight Baby"
