Project is liteweight baby

--- a/WillProduct.html
+++ b/WillProduct.html
@@ -53,7 +53,7 @@
     <img src="image/IMG_3235.JPEG" alt="RonnieColeman" class="image1">
   </div>
   <p id="Section">
-    Ronnie Coleman - "Yeah Buddy. Lightweight Baby"
+    Ronnie Coleman - "Yeah Buddy. Lightweight Baby. Woo!"
   </p>
 </section>
 <!-- End of Who is William Section-->
