--- a/WillProduct.html
+++ b/WillProduct.html
@@ -38,7 +38,7 @@
 
     </div>
     <p id="Section">
-      My name is William Inglis and a student at Fleming College.
+      My name is William Inglis and a student at Fleming College. A hardworker at the YMCA and an aspiring aquafit instructor.
     </p>
 </section>
 <!-- End of Who is William Section-->
