--- a/WillProduct.html
+++ b/WillProduct.html
@@ -34,8 +34,7 @@
       <h3>Who is William?</h3>
     </div>
     <div class="mySlides">
-      <img align="center" src="image/ChrisPhoto.JPG" alt="Photo">
-
+      <img align="center" src="image/willy.JPG" alt="Photo">
     </div>
     <p id="Section">
       My name is William Inglis and a student at Fleming College. A hardworker at the YMCA and an aspiring aquafit instructor.
@@ -50,7 +49,7 @@
   </div>
   <div class="mySlides">
     <div class="numbertext"></div>
-    <img src="image/IMG_3235.JPEG" alt="RonnieColeman" class="image1">
+    <img src="image/IMG_3235.JPG" alt="RonnieColeman" class="image1">
   </div>
   <p id="Section">
     Ronnie Coleman - "Yeah Buddy. Lightweight Baby. Woo!"
