--- a/WillProduct.html
+++ b/WillProduct.html
@@ -34,7 +34,7 @@
       <h3>Who is William?</h3>
     </div>
     <div class="mySlides">
-      <img align="center" src="image/willy.JPG" alt="Photo">
+      <img class="image1" src="image/willy.JPG" alt="Photo">
     </div>
     <p id="Section">
       My name is William Inglis and a student at Fleming College. A hardworker at the YMCA and an aspiring aquafit instructor.
