--- a/WillProduct.html
+++ b/WillProduct.html
@@ -49,7 +49,7 @@
   </div>
   <div class="mySlides">
     <div class="numbertext"></div>
-    <img src="image/IMG_3235.JPG" alt="RonnieColeman" class="image1">
+    <img src="image/Ronnie.JPG" alt="RonnieColeman" class="image1">
   </div>
   <p id="Section">
     Ronnie Coleman - "Yeah Buddy. Lightweight Baby. Woo!"
