--- a/WillProduct.html
+++ b/WillProduct.html
@@ -33,9 +33,12 @@
     <div id="Section">
       <h3>Who is William?</h3>
     </div>
-    <div class="mySlides">
-      <img class="image1" src="image/willy.JPG" alt="Photo">
-    </div>
+    <div class='container'>
+      <a href='#'>
+      <img class='resize_fit_center'
+        src='http://i.imgur.com/H9lpVkZ.jpg' />
+      </a>
+  </div>
     <p id="Section">
       My name is William Inglis and a student at Fleming College. A hardworker at the YMCA and an aspiring aquafit instructor.
     </p>
@@ -47,10 +50,12 @@
   <div id="Section">
     <h3>What keeps me motivated?</h3>
   </div>
-  <div class="mySlides">
-    <div class="numbertext"></div>
-    <img src="image/Ronnie.JPG" alt="RonnieColeman" class="image1">
-  </div>
+  <div class='container'>
+    <a href='#'>
+    <img class='resize_fit_center'
+      src='image/Ronnie.JPG' />
+    </a>
+</div>
   <p id="Section">
     Ronnie Coleman - "Yeah Buddy. Lightweight Baby. Woo!"
   </p>
