Hope this works

--- a/WillProduct.html
+++ b/WillProduct.html
@@ -36,7 +36,7 @@
     <div class='container'>
       <a href='#'>
       <img class='resize_fit_center'
-        src='http://i.imgur.com/H9lpVkZ.jpg' />
+        src='image/willy.JPG' />
       </a>
   </div>
     <p id="Section">
