--- a/aboutus.html
+++ b/aboutus.html
@@ -68,7 +68,7 @@
                 <p>William Inglis</p>
                 <h3>William's product: Implementation of trip planning for provincal parks in Ontario</h3>
                 <ul>
-                    <li>Extra Info</li>
+                    <li>Trip Planner and aspiring aquafit instructor</li>
                 </ul>
                 <button> View Product </button>
             </div>
