--- a/WillProduct.html
+++ b/WillProduct.html
@@ -34,9 +34,8 @@
       <h3>Who is William?</h3>
     </div>
     <div class='container3'>
-      <a href='#'>
-      <img class='resize_fit_center'
-        src='image/willy.JPG' alt="Will and Friends" class="center500" />
+      <img class='center500'
+        src='image/willy.JPG' alt="Will and Friends"/>
       </a>
   </div>
     <p id="Section">
@@ -51,9 +50,8 @@
     <h3>What keeps me motivated?</h3>
   </div>
   <div class='container3'>
-    <a href='#'>
-    <img class='resize_fit_center'
-      src='image/Ronnie.JPG'alt="Will and Friendss" class="center500"/>
+    <img class='center500'
+      src='image/Ronnie.JPG'alt="Will and Friendss"/>
     </a>
 </div>
   <p id="Section">
