--- a/WillProduct.html
+++ b/WillProduct.html
@@ -34,7 +34,7 @@
       <h3>Who is William?</h3>
     </div>
     <div class='container3'>
-      <img class='center500'
+      <img class='resize_fit_center'
         src='image/willy.JPG' alt="Will and Friends"/>
       </a>
   </div>
@@ -50,7 +50,7 @@
     <h3>What keeps me motivated?</h3>
   </div>
   <div class='container3'>
-    <img class='center500'
+    <img class='resize_fit_center'
       src='image/Ronnie.JPG'alt="Will and Friendss"/>
     </a>
 </div>
