--- a/WillProduct.html
+++ b/WillProduct.html
@@ -20,8 +20,8 @@
         </button>
         <div class="dropdown-content">
           <a href= "ChrisProduct.html"> Chris</a>
-          <a href= "#"> Grace</a>
-          <a href= "#"> Ryan</a>
+          <a href= "bikeinfrastructure.html"> Grace</a>
+          <a href= "hurricanemanagement.html"> Ryan</a>
           <a href= "WillProduct.html">William</a>
         </div>
       </div>
