--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -22,8 +22,8 @@
         </button>
         <div class="dropdown-content">
           <a href= "ChrisProduct.html"> Chris</a>
-          <a href= "#"> Grace</a>
-          <a href= "#"> Ryan</a>
+          <a href= "bikeinfrastructure.html"> Grace</a>
+          <a href= "hurricanemanagement.html"> Ryan</a>
           <a href= "WillProduct.html">William</a>
         </div>
       </div>
@@ -90,7 +90,7 @@
       <div class = "container2">
           <div class = "center">
               <h1> Something about the product here I guess </h1>
-              <p> Get in reach with one of our GIS specialists today</p>
+              <p> If you'd like to learn more, get in reach with one of our GIS specialists today</p>
               <button onclick = "myButton()">Book a consultation now</button>
           </div>
       </div>
