--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Website Title</title>
     <link rel="stylesheet" href="styles.css" />
+    <script src="Script.js"></script>
+  
   </head>
+
   <body>
 
     <!-- Navigation Start. Keep this consistent throughout the pages-->
@@ -52,7 +56,5 @@
         </div>
     </section>
   </body>
-
-  <script src="Script.js"></script> <!-- Call in script.js for button and other functions-->
 
 </html>
