--- a/hurricanemanagement.html
+++ b/hurricanemanagement.html
@@ -40,8 +40,10 @@
                 <h1> GR3 Knows All </h1>
                 <p> If you'd like to learn more, get in reach with one of our GIS specialists today</p>
                 <button onclick = "myButton()">Book a consultation now</button>
-                <button onclick="topFunction()" id="myBtn">
-                  <img src="image/up-arrow.png" alt="alternative">
+            </div>
+            <div>
+              <button onclick="topFunction()" id="myBtn">
+              <img src="image/up-arrow.png" alt="alternative">
               </button>
             </div>
         </div>
