back to Top on landing page

--- a/hurricanemanagement.html
+++ b/hurricanemanagement.html
@@ -33,6 +33,12 @@
     </div>
     <!-- Navigation End. Keep this consistent throughout the pages-->
 
+    <div>
+      <h1 class="headline">Best <span class="home_text">Broadband</span><br>Internet Plans For You</h1>
+      <p class="para para-light py-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus tempore accusamus quis magnam doloremque itaque ad modi, pariatur iste labore similique officiis impedit aspernatur aperiam facere architecto. Eligendi, repellendus inventore!</p>
+
+    </div> 
+
     <!-- Concluding remarks and button to contact us page-->   
     <section class="background2">
         <div class = "container2">
