--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Website Title</title>
+    <title>GR3 Consulting</title>
     <link rel="stylesheet" href="styles.css" />
   
   </head>
@@ -34,9 +34,9 @@
     <section class="background1">
       <div class="container">
         <div class="column-left">
-          <h1> Heading 1 Grace</h1>
+          <h1> WHAT WE DO</h1>
           <p>
-            Purpose of our website or slogan goes in here! William
+            We provide sustainable solutions. 
           </p>
           <button>Chris</button>
         </div>
@@ -51,6 +51,11 @@
                 <h1> Products </h1>
                 <p> Introduction or references to other parts of our website... ideas Ryan</p>
                 <button onclick = "myButton()">Book a consultation now</button>
+            </div>
+            <div>
+              <button onclick="topFunction()" id="myBtn">
+              <img src="image/up-arrow.png" alt="alternative">
+              </button>
             </div>
         </div>
     </section>
