is it WORKING now?

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <p>
             We provide sustainable solutions. 
           </p>
-          <button>Chris</button>
+          <button>Learn How</button>
         </div>
         <div class="column-right">
           <img src="image/sample.jpg" alt="sample" class="image">
@@ -53,9 +53,8 @@
                 <button onclick = "myButton()">Book a consultation now</button>
             </div>
             <div>
-              <button onclick="topFunction()" id="myBtn">
+              <button onclick="topFunction()" id="myBtn"></button>
               <img src="image/up-arrow.png" alt="alternative">
-              </button>
             </div>
         </div>
     </section>
