--- a/WillProduct.html
+++ b/WillProduct.html
@@ -66,9 +66,19 @@
       <div class="center">
         <h1>Implementation of trip planning</h1>
         <p id="Section2">
+          This use of the trip planning will help clients who are interested in visiting Ontario's Provincal Parks.
+          <br>
+          <br>
           My contribution to this consulting company is designing and implementing a python application for those looking to visit Provincial Parks in Ontario. More specifically, this application will help users to plan their trip and visit all their desired points of interest in the most efficient manner possible.
           <br>
+          <br>
           Based on which parks the user inputs as locations they are interested in, the application will calculate the distances, bearings and trip length, and return to the user an itinerary of parks to visit (in sequential order)
+          <br>
+          <br>
+          The program uses a sophisticated program structure that takes the inputs from the user and calculates the distance using the Harversine formula, bearing calculation, and time to drive to that location based on an average driving speed. 
+          <br>
+          <br>
+          These behind the scenes calculations will output a trip itinerary for the client and what the trip to the location will look like. 
         </p>
       </div>
     </div>
