--- a/WillProduct.html
+++ b/WillProduct.html
@@ -38,6 +38,9 @@
         src='image/willy.JPG' alt="Will and Friends"/>
       </a>
   </div>
+  <p id="Section">
+    The handsome fella in the middle
+  </p>
     <p id="Section">
       My name is William Inglis and a student at Fleming College. A hardworker at the YMCA and an aspiring aquafit instructor.
     </p>
