js button issue

--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
                 <button onclick = "myButton()">Book a consultation now</button>
             </div>
             <div>
-              <button onclick="topFunction()" id="myBtn"></button>
-              <img src="image/up-arrow.png" alt="alternative">
+              <button onclick="topFunction()" id="myBtn" style="display: block;">
+                <img src="images/up-arrow.png" alt="alternative">
+            </button>
             </div>
         </div>
     </section>
