--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             <div>
               <button onclick="topFunction()" id="myBtn" style="display: block;">
-                <img src="images/up-arrow.png" alt="alternative">
+                <img src="images/up-arrow.png">
             </button>
             </div>
         </div>
