--- a/hurricanemanagement.html
+++ b/hurricanemanagement.html
@@ -40,7 +40,7 @@
     </div> 
 
     <!-- Concluding remarks and button to contact us page-->   
-    <section class="background2">
+      <section class="background2">
         <div class = "container2">
             <div class = "center">
                 <h1> GR3 Knows All </h1>
@@ -48,15 +48,12 @@
                 <button onclick = "myButton()">Book a consultation now</button>
             </div>
             <div>
-              <button onclick="topFunction()" id="myBtn">
-              <img src="image/up-arrow.png" alt="alternative">
-              </button>
+              <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
             </div>
-        </div>
-    </section>
+          </div>
+      </section>
   
-      </body>
-      <script src="Script.js"></script> <!-- Call in script.js for button and other functions-->
+    </body>
+    <script src="Script.js"></script> <!-- Call in script.js for button and other functions-->
 
-    </div>
   </html>
