--- a/WillProduct.html
+++ b/WillProduct.html
@@ -66,7 +66,7 @@
 <!-- My product Section-->
   <section class="background1">
     <div class="container2">
-      <div class="center">
+      <div class="centerr">
         <h1>Implementation of trip planning</h1>
         <p id="Section2">
           This use of the trip planning will help clients who are interested in visiting Ontario's Provincal Parks.
