--- a/aboutus.html
+++ b/aboutus.html
@@ -40,7 +40,7 @@
                     <li>Extra Info</li>
                     <li>Extra Info</li>
                 </ul>
-                <button> View Product </button>
+                <button onclick = "GButton()"> View Product </button>
             </div>
             <div class="names">
                 <p>Ryan</p>
@@ -51,7 +51,7 @@
                     <li>Extra Info</li>
                     <li>Extra Info</li>
                 </ul>
-                <button> View Product </button>
+                <button onclick = "RButton()"> View Product </button>
             </div>
             <div class="names">
                 <p>Chris</p>
@@ -62,7 +62,7 @@
                     <li>Extra Info</li>
                     <li>Extra Info</li>
                 </ul>
-                <button> View Product</button>
+                <button onclick = "CButton()"> View Product</button>
             </div>
             <div class="names">
                 <p>William Inglis</p>
@@ -70,7 +70,7 @@
                 <ul>
                     <li>Trip Planner and aspiring aquafit instructor</li>
                 </ul>
-                <button> View Product </button>
+                <button onclick = "WButton()"> View Product </button>
             </div>
             </div>
         </div>
