--- a/ChrisProduct.html
+++ b/ChrisProduct.html
@@ -11,12 +11,9 @@
 <!-- Navigation Start. Keep this consistent throughout the pages-->
 <div class="navbar">
   <div class="logo">GR3 Consulting</div>
-  <a href="index.html">Home</a>
-  <a href="aboutus.html">About Us</a>
-  <a href="contact.html">Contact Us</a>
-  <div class="dropdown">
+  <a href="index.html" class = "dropbtn">Home</a>
+  <div class="dropdown" id="minimargin"> <!--minimargin id to give some space next to products without messing with flexbox-->
     <button class="dropbtn">Products
-      <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
       <a href= "ChrisProduct.html"> Chris</a>
@@ -25,6 +22,8 @@
       <a href= "WillProduct.html">William</a>
     </div>
   </div>
+  <a href="aboutus.html" class = "dropbtn">About Us</a>
+  <a href="contact.html" class = "dropbtn">Contact Us</a>
 </div>
 <!-- Navigation End. Keep this consistent throughout the pages-->
   
