--- a/hurricanemanagement.html
+++ b/hurricanemanagement.html
@@ -33,6 +33,18 @@
     </div>
     <!-- Navigation End. Keep this consistent throughout the pages-->
 
+    <video autoplay muted loop id="myVideo">
+      <source src="hurricane.webm" type="video/webm">
+      Your browser does not support HTML5 video.
+    </video>
+    
+    <div class="content">
+      <h1>Applying Core Risk Management Principles to Disaster Risk Management</h1>
+      <p>Businesses can leverage the recent experiences and basic risk management principles to develop proactive DRM strategies. The basic principles of risk management can and should be applied for Disaster Risk Management (DRM) to:</p>
+      <button id="myBtn" onclick="myFunction()">Pause</button>
+    </div>
+
+
     <div>
       <h1 class="headline">Best <span class="home_text">Broadband</span><br>Internet Plans For You</h1>
       <p class="para para-light py-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus tempore accusamus quis magnam doloremque itaque ad modi, pariatur iste labore similique officiis impedit aspernatur aperiam facere architecto. Eligendi, repellendus inventore!</p>
