--- a/hurricanemanagement.html
+++ b/hurricanemanagement.html
@@ -33,14 +33,13 @@
     <!-- Navigation End. Keep this consistent throughout the pages-->
 
     <video autoplay muted loop id="myVideo">
-      <source src="hurricane.webm" type="video/webm">
-      Your browser does not support HTML5 video.
+      <source src="hurricane.mp4" type="image/mp4">
     </video>
     
     <div class="content">
       <h1>Applying Core Risk Management Principles to Disaster Risk Management</h1>
       <p>Businesses can leverage the recent experiences and basic risk management principles to develop proactive DRM strategies. The basic principles of risk management can and should be applied for Disaster Risk Management (DRM) to:</p>
-      <button id="myBtn" onclick="myFunction()">Pause</button>
+      <button id="myBttn" onclick="myFunction()">Pause</button>
     </div>
 
 
