--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,8 @@
     
     <section class="background1">
         <div class="row">
-            <div class="column">
-                <div class="center">
+            <div class="column33">
+                <div class="image.center">
                     <!-- Image Credit: David, CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons-->
                     <img src="image/mail.jpg" alt="Email" class="imground">
                     <h3>EMAIL</h3>
@@ -39,7 +39,7 @@
                     <h5>Quote@notrealemail.com</h5>   
                 </div>
             </div>
-            <div class="column" >
+            <div class="column33" >
                 <div class="center">
                     <!--Image Credit: Dave Gandy, CC BY 3.0 <https://creativecommons.org/licenses/by/3.0>, via Wikimedia Commons-->
                     <img src="image/house.jpg" alt="Address" class="imground">
@@ -49,7 +49,7 @@
                     <h5>Lindsay, ON K9V 5E6</h5>
                 </div>
              </div>
-            <div class="column">
+            <div class="column33">
                 <div class="center">
                     <!--Image Credit: Tokyoship, CC BY-SA 3.0 <https://creativecommons.org/licenses/by-sa/3.0>, via Wikimedia Commons-->
                     <img src="image/phone.jpg" alt="phone number" class="imground">
