--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 
     
     <section class="background1">
-        <div class="row">
+        <div class="rowcontact">
             <div class="column33">
                 <div class="image.center">
                     <!-- Image Credit: David, CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons-->
