--- a/ChrisProduct.html
+++ b/ChrisProduct.html
@@ -28,14 +28,64 @@
 <!-- Navigation End. Keep this consistent throughout the pages-->
   
     
-    <section class="background1">
-        <div class="row">
-          <h3>Test</h3>
-        </div>
-        <div class="row">
-          <h3>Test</h3>
+<!-- Slideshow-->
+
+    <!-- Container for the image gallery -->
+    <div class="container4">
+
+      <!-- Full-width images with number text -->
+          <div class="mySlides">
+            <div class="numbertext">1 / 3</div>
+            <img src="image/BikeMap1.png" alt="Bike Map 1 of Hamilton" class="image1">
+          </div>
+  
+          <div class="mySlides">
+            <div class="numbertext">2 / 3</div>
+            <img src="image/BikeMap2.png" alt="Bike Map 2 of Hamilton" class="image1">
+          </div>
+  
+          <div class="mySlides">
+            <div class="numbertext">3 / 3</div>
+            <img src="image/BikeMap3.png" alt="Bike Map 3 of Hamilton" class="image1">
+          </div>
+  
+          <!-- Next and previous buttons -->
+          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  
+          <!-- Image text -->
+          <div class="caption-container">
+            <p id="caption">Generated Maps</p>
+          </div>
+  
+          <!-- Thumbnail images -->
+          <div class="row">
+            <div class="column">
+              <img class="demo cursor" src="image/BikeMap1.png" alt="Street network of Hamilton" onclick="currentSlide(1)">
+            </div>
+            <div class="column">
+              <img class="demo cursor" src="image/BikeMap2.png" alt="Hamilton" onclick="currentSlide(2)">
+            </div>
+            <div class="column">
+              <img class="demo cursor" src="image/BikeMap3.png" alt="Local bike network" onclick="currentSlide(3)">
+            </div>
+          </div>
+         </div>
+  
+      <!-- Concluding remarks and button to contact us page-->   
+      <section class="background2">
+        <div class = "container2">
+            <div class = "center">
+                <h1> Something about the product here I guess </h1>
+                <p> If you'd like to learn more, get in reach with one of our GIS specialists today</p>
+                <button onclick = "myButton()">Book a consultation now</button>
+            </div>
         </div>
     </section>
+  
+      </body>
+      <script src="Script.js"></script> <!-- Call in script.js for button and other functions-->
+  </html>
 
 
     <section class="background2">
