--- a/ChrisProduct.html
+++ b/ChrisProduct.html
@@ -59,10 +59,10 @@
         <img src="image/cbroomhuc76.jpg" alt="Snow" class="image1" onclick="TabGallery(this);">
       </div>
       <div class="column25">
-        <img src="img_mountains.jpg" alt="Mountains" class="image1" onclick="TabGallery(this);">
+        <img src="image/ChrisMap1.pdf" alt="Mountains" class="image1" onclick="TabGallery(this);">
       </div>
       <div class="column25">
-        <img src="img_lights.jpg" alt="Lights" class="image1" onclick="TabGallery(this);">
+        <img src="image/ChirsMap2.pdf" alt="Lights" class="image1" onclick="TabGallery(this);">
       </div>
     </div>
     
@@ -78,18 +78,18 @@
   </html>
 
 
+    <<!-- Concluding remarks and button to contact us page-->   
     <section class="background2">
-        <div class = "container2">
-            <div class = "center">
-                <h1> Products </h1>
-                <p> Introduction or references to other parts of our website... ideas Ryan</p>
-                <button>Book a consultation now</button>
-            </div>
-        </div>
-    </section>
-  </body>
-</html>
-</body>
+      <div class = "container2">
+          <div class = "center">
+              <h1> Something about the product here I guess </h1>
+              <p> If you'd like to learn more, get in reach with one of our GIS specialists today</p>
+              <button onclick = "myButton()">Book a consultation now</button>
+          </div>
+      </div>
+  </section>
 
-
+    </body>
+    <script src="Script.js"></script> <!-- Call in script.js for button and other functions-->
 </html>
+
