chris product page

--- a/ChrisProduct.html
+++ b/ChrisProduct.html
@@ -50,6 +50,12 @@
       <p>Click on the images below:</p>
     </div>
     
+    <div class="container">
+      <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
+      <img id="expandedImg" style="width:100%">
+      <div id="imgtext"></div>
+    </div>
+
     <!-- The four columns -->
     <div class="row">
       <div class="column25">
@@ -59,18 +65,14 @@
         <img src="image/cbroomhuc76.jpg" alt="Snow" class="image1" onclick="TabGallery(this);">
       </div>
       <div class="column25">
-        <img src="image/ChrisMap1.pdf" alt="Mountains" class="image1" onclick="TabGallery(this);">
+        <img src="image/ChirsMap2_page-0001.jpg" alt="Mountains" class="image1" onclick="TabGallery(this);">
       </div>
       <div class="column25">
-        <img src="image/ChirsMap2.pdf" alt="Lights" class="image1" onclick="TabGallery(this);">
+        <img src="ChrisMap1_page-0001.jpg" alt="Lights" class="image1" onclick="TabGallery(this);">
       </div>
     </div>
     
-    <div class="container">
-      <span onclick="this.parentElement.style.display='none'" class="closebtn">&times;</span>
-      <img id="expandedImg" style="width:100%">
-      <div id="imgtext"></div>
-    </div>
+   
     </section>
   
       </body>
