about us page layout

--- a/aboutus.html
+++ b/aboutus.html
@@ -32,12 +32,12 @@
         <div class="names-row">
             <div class="names">
                 <p>Grace</p>
-                <h3>Grace's product: Implementation of separated bike lanes (consult, planning) around a city</h3>
+                <h3>Grace's product: Implementation of separated bike lanes (consult, planning) in a city</h3>
                 <ul>
-                    <li>Extra Info</li>
-                    <li>Extra Info</li>
-                    <li>Extra Info</li>
-                    <li>Extra Info</li>
+                    <li>Access road network</li>
+                    <li>View impacts on traffic flow influenced by bike lanes</li>
+                    <li>Access to maps of the chosen study area</li>
+                    <li>Aid in city planning and traffic flow analysis</li>
                 </ul>
                 <button onclick = "GButton()"> View Product </button>
             </div>
@@ -74,6 +74,20 @@
             </div>
         </div>
     </div>
+
+    <!-- Concluding remarks and button to contact us page-->   
+    <section class="background2">
+        <div class = "container2">
+            <div class = "center">
+                <h1> GR3 Knows All </h1>
+                <p> If you'd like to learn more, get in reach with one of our GIS specialists today</p>
+                <button onclick = "myButton()">Book a consultation now</button>
+            </div>
+            <div>
+              <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+            </div>
+        </div>
+      </section>
 
     
 
