changed content of chris product page

--- a/ChrisProduct.html
+++ b/ChrisProduct.html
@@ -31,9 +31,9 @@
 <section class="background1">
   <div class="container2">
     <div class="center">
-      <h1> Bike Infrastructure Implementation</h1>
+      <h1> Topographic, Greyscale, Digitizing, and More!</h1>
       <p id="PLayout2">
-        The methods involve developing a topologically correct street network with updated capacity and employing numerous scenarios to evaluate the overall impact on traffic from separated bike lanes. The first scenario is the base case scenario, where capacity remains untouched. The subsequent scenarios employ a reduction in capacity on traffic lanes with existing narrow bike lanes by 25%, 50%, 75%, and 100%. 
+        At GR3 Consulting, Chris has taken the lead of creating newly digitized products, as well as general reference topological map and greyscale mapping services. He is also specialised in analysis for urban planing projects. 
       </p>
     </div>
   </div>
@@ -46,8 +46,8 @@
 
     <!-- Full-width images with number text -->
     <div style="text-align:center">
-      <h2>Tabbed Image Gallery</h2>
-      <p>Click on the images below:</p>
+      <h2>Gallery</h2>
+      <p>Click on the images below to get a closer look!:</p>
     </div>
     
    
