--- a/ChrisProduct.html
+++ b/ChrisProduct.html
@@ -64,7 +64,7 @@
         <img src="image/ChirsMap2_page-0001.jpg" alt="Mountains" class="image1" onclick="TabGallery(this);">
       </div>
       <div class="column25">
-        <img src="ChrisMap1_page-0001.jpg" alt="Lights" class="image1" onclick="TabGallery(this);">
+        <img src="image/ChrisMap1_page-0001.jpg" alt="Lights" class="image1" onclick="TabGallery(this);">
       </div>
     </div>
 
