--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -91,7 +91,7 @@
     <section class="background2">
       <div class = "container2">
           <div class = "center">
-              <h1> Something about the product here I guess </h1>
+              <h1> Get concrete answers to your city's infrastructure problems </h1>
               <p> If you'd like to learn more, get in reach with one of our GIS specialists today</p>
               <button onclick = "myButton()">Book a consultation now</button>
           </div>
