--- a/aboutus.html
+++ b/aboutus.html
@@ -56,10 +56,10 @@
                 <p>Chris</p>
                 <h3>Chris's product: TBD</h3>
                 <ul>
-                    <li>Extra Info</li>
-                    <li>Extra Info</li>
-                    <li>Extra Info</li>
-                    <li>Extra Info</li>
+                    <li>Topographic mapping services</li>
+                    <li>Greyscale mapping servcies</li>
+                    <li>Urban planing analysis</li>
+                    <li>Digitizing</li>
                 </ul>
                 <button onclick = "CButton()"> View Product</button>
             </div>
