--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,15 @@
     </section>
 
     <section class="background2">
-        
+            <<!-- Concluding remarks and button to contact us hom page-->   
+        <div class = "container2">
+            <div class = "center">
+                <h1> Interested in our services? </h1>
+                <p> You are in the right place! If you'd like to learn more, get in reach with one of our GIS specialists by using our contact information above today</p>
+                <button onclick = "myButton()">Book a consultation now</button>
+            </div>
+        </div>
+    </section>
     </section>
 
    
