add back to Top button

--- a/Gallery.html
+++ b/Gallery.html
@@ -8,6 +8,9 @@
     </head>
   
   <body>
+    <div>
+      <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+    </div>
   </body>
   
   <script src="Script.js"></script> <!-- Call in script.js for button and other functions-->
