--- a/ChrisProduct.html
+++ b/ChrisProduct.html
@@ -10,7 +10,7 @@
 
 <!-- Navigation Start. Keep this consistent throughout the pages-->
 <div class="navbar">
-  <div class="logo">GR3 Consulting</div>
+  <div class="logo">GR8 Consulting</div>
   <a href="index.html" class = "dropbtn">Home</a>
   <div class="dropdown" id="minimargin"> <!--minimargin id to give some space next to products without messing with flexbox-->
     <button class="dropbtn">Products
@@ -89,6 +89,9 @@
               <h1> Interested in our services? </h1>
               <p> If you'd like to learn more, get in reach with one of our GIS specialists today</p>
               <button onclick = "myButton()">Book a consultation now</button>
+          </div>
+          <div>
+            <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
           </div>
       </div>
   </section>
