--- a/WillProduct.html
+++ b/WillProduct.html
@@ -95,6 +95,9 @@
               <p> If you'd like to learn more, get in reach with one of our GIS specialists today</p>
               <button onclick = "myButton()">Book a consultation now</button>
           </div>
+          <div>
+            <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+          </div>
       </div>
   </section>
 
