--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 
     <!-- Navigation Start. Keep this consistent throughout the pages-->
     <div class="navbar">
-        <div class="logo">GR3 Consulting</div>
+        <div class="logo">GR8 Consulting</div>
         <a href="index.html" class = "dropbtn">Home</a>
         <div class="dropdown" id="minimargin"> <!--minimargin id to give some space next to products without messing with flexbox-->
           <button class="dropbtn">Products
@@ -62,6 +62,9 @@
     </section>
 
     <section class="background2">
+      <div>
+        <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+      </div>
         
     </section>
 
