--- a/hurricanemanagement.html
+++ b/hurricanemanagement.html
@@ -5,7 +5,7 @@
     
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Bike Infrastructure</title>
+        <title>Hurricane Management</title>
         <link rel="stylesheet" href="styles.css" />
     
     </head>
@@ -15,7 +15,7 @@
 
     <!-- Navigation Start. Keep this consistent throughout the pages-->
     <div class="navbar">
-      <div class="logo">GR3 Consulting</div>
+      <div class="logo">GR8 Consulting</div>
       <a href="index.html" class = "dropbtn">Home</a>
       <div class="dropdown" id="minimargin"> <!--minimargin id to give some space next to products without messing with flexbox-->
         <button class="dropbtn">Products
