--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
   <head>
 
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta charset="UTF-8">
+    <!--Internet Explorer compatible-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <!--Mobile Metas-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!--Site Metas-->
     <title>GR3 Consulting</title>
     <link rel="stylesheet" href="styles.css"/>
   
@@ -13,7 +17,7 @@
 
     <!-- Navigation Start. Keep this consistent throughout the pages-->
     <div class="navbar">
-      <div class="logo">GR3 Consulting</div>
+      <div class="logo">GR8 Consulting</div>
       <a href="index.html" class = "dropbtn">Home</a>
       <div class="dropdown" id="minimargin"> <!--minimargin id to give some space next to products without messing with flexbox-->
         <button class="dropbtn">Products
@@ -50,7 +54,7 @@
     <section class="background2">
       <div class = "container2">
           <div class = "center">
-              <h1> GR3 Knows All </h1>
+              <h1> GR8 Knows All </h1>
               <p> If you'd like to learn more, get in reach with one of our GIS specialists today</p>
               <button onclick = "myButton()">Book a consultation now</button>
           </div>
