--- a/hurricanemanagement.html
+++ b/hurricanemanagement.html
@@ -46,6 +46,7 @@
                 <p> If you'd like to learn more, get in reach with one of our GIS specialists today</p>
                 <button onclick = "myButton()">Book a consultation now</button>
             </div>
+              <!--Back to Top Button-->
             <div>
               <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
             </div>
