--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -95,7 +95,8 @@
               <p> If you'd like to learn more, get in reach with one of our GIS specialists today</p>
               <button onclick = "myButton()">Book a consultation now</button>
           </div>
-          <div>
+           <!--Back to Top Button-->
+           <div>
             <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
           </div>
       </div>
