--- a/aboutus.html
+++ b/aboutus.html
@@ -45,10 +45,9 @@
                 <p>Ryan</p>
                 <h3>Ryan's product: Implementation of disaster management and mitigation for/from hurricanes</h3>
                 <ul>
-                    <li>Extra Info</li>
-                    <li>Extra Info</li>
-                    <li>Extra Info</li>
-                    <li>Extra Info</li>
+                    <li>Building disaster management frameworks</li>
+                    <li>Hurricane path projection and preparedness</li>
+                    <li>Adding value for businesses</li>
                 </ul>
                 <button onclick = "RButton()"> View Product </button>
             </div>
@@ -79,7 +78,7 @@
     <section class="background2">
         <div class = "container2">
             <div class = "center">
-                <h1> GR3 Knows All </h1>
+                <h1> GR8 Knows All </h1>
                 <p> If you'd like to learn more, get in reach with one of our GIS specialists today</p>
                 <button onclick = "myButton()">Book a consultation now</button>
             </div>
