--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--Mobile Metas-->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--Site Metas-->
-    <title>GR3 Consulting</title>
+    <title>GR* Consulting / Home Page</title>
     <link rel="stylesheet" href="styles.css"/>
   
   </head>
