testing navbar shrink

--- a/aboutus.html
+++ b/aboutus.html
@@ -8,6 +8,10 @@
 
 <body>
 
+    <!--Navbar toggle when screensize changes-->
+    <div class="mobile-nav-toggle"><div class="top-bar"></div><div class="middle-bar"></div><div class="bottom-bar"></div></div>
+    <div class="mobile-nav-toggle fixed-nav-toggle"><div class="top-bar"></div><div class="middle-bar"></div><div class="bottom-bar"></div></div>
+
     <!-- Navigation Start. Keep this consistent throughout the pages-->
     <div class="navbar">
         <div class="logo">GR8 Consulting</div>
