--- a/Gallery.html
+++ b/Gallery.html
@@ -29,6 +29,10 @@
 
     <section class="background2">
 
+      <h2 id="HLayout1">
+        <i> GR3 Consulting </i> Gallery
+      </h2>
+
       <!-- Slideshow-->
 
     <!-- Container for the image gallery -->
