--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
     <!--Mobile Metas-->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--Site Metas-->
-    <title>GR* Consulting / Home Page</title>
+    <title>GR8 Consulting / Home Page</title>
     <link rel="stylesheet" href="styles.css"/>
   
   </head>
 
   <body>
 
+    <!--Navbar toggle when screensize changes-->
+    <div class="mobile-nav-toggle"><div class="top-bar"></div><div class="middle-bar"></div><div class="bottom-bar"></div></div>
+    <div class="mobile-nav-toggle fixed-nav-toggle"><div class="top-bar"></div><div class="middle-bar"></div><div class="bottom-bar"></div></div>
+    
     <!-- Navigation Start. Keep this consistent throughout the pages-->
     <div class="navbar">
       <div class="logo">GR8 Consulting</div>
