--- a/bikeinfrastructure.html
+++ b/bikeinfrastructure.html
@@ -43,49 +43,57 @@
           </div>
     </section>
         
-    <!-- Slideshow-->
+      <!-- Slideshow-->
 
     <!-- Container for the image gallery -->
-      <div class="container4">
+    <div class="container4">
 
-    <!-- Full-width images with number text -->
-        <div class="mySlides">
-          <div class="numbertext">1 / 3</div>
-          <img src="image/BikeMap1.png" alt="Bike Map 1 of Hamilton" class="image1">
-        </div>
-
-        <div class="mySlides">
-          <div class="numbertext">2 / 3</div>
-          <img src="image/BikeMap2.png" alt="Bike Map 2 of Hamilton" class="image1">
-        </div>
-
-        <div class="mySlides">
-          <div class="numbertext">3 / 3</div>
-          <img src="image/BikeMap3.png" alt="Bike Map 3 of Hamilton" class="image1">
-        </div>
-
-        <!-- Next and previous buttons -->
-        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-        <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-        <!-- Image text -->
-        <div class="caption-container">
-          <p id="caption">Generated Maps</p>
-        </div>
-
-        <!-- Thumbnail images -->
-        <div class="row">
-          <div class="column">
-            <img class="demo cursor" src="image/BikeMap1.png" alt="Street network of Hamilton" onclick="currentSlide(1)">
+      <!-- Full-width images with number text -->
+          <div class="mySlides">
+            <div class="numbertext">1 / 3</div>
+            <img src="image/BikeMap1.png" alt="Bike Map 1 of Hamilton" class="image1">
           </div>
-          <div class="column">
-            <img class="demo cursor" src="image/BikeMap2.png" alt="Hamilton" onclick="currentSlide(2)">
+  
+          <div class="mySlides">
+            <div class="numbertext">2 / 3</div>
+            <img src="image/BikeMap2.png" alt="Bike Map 2 of Hamilton" class="image1">
           </div>
-          <div class="column">
-            <img class="demo cursor" src="image/BikeMap3.png" alt="Local bike network" onclick="currentSlide(3)">
+  
+          <div class="mySlides">
+            <div class="numbertext">3 / 3</div>
+            <img src="image/BikeMap3.png" alt="Bike Map 3 of Hamilton" class="image1">
           </div>
-        </div>
-       </div>
+
+          <div class="mySlides">
+            <div class="numbertext">3 / 3</div>
+            <img src="image/BikeMap4.png" alt="Traffic flow analysis" class="image1">
+          </div>
+  
+          <!-- Next and previous buttons -->
+          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  
+          <!-- Image text -->
+          <div class="caption-container">
+            <p id="caption">Generated Maps</p>
+          </div>
+  
+          <!-- Thumbnail images -->
+          <div class="row">
+            <div class="column">
+              <img class="demo cursor" src="image/BikeMap1.png" alt="Street network of Hamilton" onclick="currentSlide(1)">
+            </div>
+            <div class="column">
+              <img class="demo cursor" src="image/BikeMap2.png" alt="Hamilton" onclick="currentSlide(2)">
+            </div>
+            <div class="column">
+              <img class="demo cursor" src="image/BikeMap3.png" alt="Local bike network" onclick="currentSlide(3)">
+            </div>
+            <div class="column">
+              <img class="demo cursor" src="image/BikeMap4.png" alt="Traffic flow analysis" onclick="currentSlide(3)">
+            </div>
+          </div>
+    </div>
 
     <!-- Concluding remarks and button to contact us page-->   
     <section class="background2">
