--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
     <section class="background1">
         <div class="rowcontact">
             <div class="column33">
-                <div class="image.center">
+                <div class="center">
                     <!-- Image Credit: David, CC BY-SA 4.0 <https://creativecommons.org/licenses/by-sa/4.0>, via Wikimedia Commons-->
                     <img src="image/mail.jpg" alt="Email" class="imground">
                     <h3>EMAIL</h3>
